--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express-ejs-layouts": "^2.5.1",
     "express-list-endpoints": "^6.0.0",
